Add GSC verification file, CloudFlare analitycs and made README users oriented

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <meta name="twitter:title" content="How much you lose keeping money in cash">
   <meta name="twitter:description" content="Free calculator: amount + country → see your loss in 10 years. No sign-up.">
   <link rel="stylesheet" href="styles.css">
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "b6f3e8f68f5f420ea7b6a04452d28b3a"}'></script><!-- End Cloudflare Web Analytics -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
